--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Allison Blank Theme
-Theme URI: URL for Allison Blank
+Theme Name: frank gathering
+Theme URI: URL for frank gathering
 Author: Allison Logan
-Description: Blank theme for WIE course
+Description: Theme for frank gathering
 Version: 1.0
 License: Open
-Text Domain: allison_logan_blank_template
+Text Domain: frank_gathering_theme
 */
 
 @import url("css/skeleton.css");
