updates theme details

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /*
 Theme Name: frank gathering
-Theme URI: URL for frank gathering
+Theme URI: http://frank.jou.ufl.edu/
 Author: Allison Logan
+Author URI: https://allisoncandreva.com/
 Description: Theme for frank gathering
 Version: 1.0
 License: Open
-Text Domain: frank_gathering_theme
+Text Domain: frank_gathering
 */
 
 @import url("css/skeleton.css");
