--- a/style.css
+++ b/style.css
@@ -82,6 +82,57 @@ h6 {font-size: 1.1rem;}
 	padding: 0;
 }
 
+/*--Social Links--*/
+.social-navigation ul {
+	list-style: none;
+	margin: 0 0 -0.4375em;
+}
+
+.social-navigation li {
+	float: left;
+}
+
+.social-navigation a {
+	font-family: FontAwesome;
+	font-size: 2.5em;
+	color: #f7b518;
+	display: block;
+	position: relative;
+	width: 35px;
+}
+
+.social-navigation a:before {
+	content: "\f415";
+	height: 33px;
+	line-height: 33px;
+	text-align: center;
+	width: 33px;
+}
+
+.social-navigation a[href*="facebook.com"]:before {
+	content: "\f082";
+}
+
+.social-navigation a[href*="twitter.com"]:before {
+	content: "\f081";
+}
+
+.social-navigation a[href*="instagram.com"]:before {
+	content: "\f16d";
+}
+
+.social-navigation a[href*="linkedin.com"]:before {
+	content: "\f08c";
+}
+
+.social-navigation a[href*="vimeo.com"]:before {
+	content: "\f194";
+}
+
+.social-navigation a[href*="youtube.com"]:before {
+	content: "\f431";
+}
+
 /*--Front Page--*/
 .post-thumbnail-container {
     padding: 2px;
