--- a/style.css
+++ b/style.css
@@ -197,6 +197,42 @@ header {
 }
 
 /*--Home Page Styles--*/
+.hero {
+	height: 600px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.home-title {
+	text-align: center;
+	background-color: rgba(255,255,255,0.8);
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	padding: 20px;
+	max-width: 500px;
+	margin: 0 auto;
+	position: relative;
+	top: 55%;
+	transform: translateY(-45%);
+	-webkit-transform: translateY(-45%);	
+}
+
+.home-content h2 {
+	text-align: center;
+}
+
+.join-us-btn a {
+	text-decoration: none;
+	background-color: #f7b518;
+	color: #fff;
+	padding: 10px 20px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	font-size: 24px;
+	letter-spacing: 1px;
+}
+
 .link-boxes {
 	width: 75%;
 	height: 200px;
@@ -231,6 +267,8 @@ header {
 
 .quote {
 	background-color: rgba(255,255,255,0.8);
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
 	padding: 20px;
 	max-width: 500px;
 	margin: 0 auto;
