--- a/style.css
+++ b/style.css
@@ -29,11 +29,41 @@ h6 {font-size: 1.1rem;}
 
 .container {
 	max-width: 1200px;
-	margin-top: 110px;
+	margin-top: 60px;
 	padding: 0 100px;
 }
 
-/*--- Header --- */
+/*--Full Image/Quote--*/
+.full-img-bg {
+	height: 500px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+
+.quote {
+	background-color: rgba(255,255,255,0.8);
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	padding: 20px;
+	max-width: 500px;
+	margin: 0 auto;
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.quote p {
+	margin: 0;
+	font-size: 18px;
+	line-height: 20px;
+}
+
+
+/*--------------------*/
+/*------ Header ------*/
+/*--------------------*/
 header {
 	position: fixed;
 	top: 0;
@@ -41,9 +71,8 @@ header {
 	height: 110px;
 	z-index: 70;
 	width: 100%;
-	padding: 20px 0 0;
-	margin: 0;
 	background-color: #fff;
+	border-bottom: 1px solid #73c92d;
 }
 
 .siteheader {
@@ -97,7 +126,6 @@ header {
 }
 
 /*--Search Box Styles--*/
-/*--Styles for toggle--*/
 .search-form {
     float: left;
 	margin: 0;
@@ -196,7 +224,11 @@ header {
 	content: "\f431";
 }
 
+/*--------------------*/
 /*--Home Page Styles--*/
+/*--------------------*/
+
+/*--Video Background/Overlay--*/
 .hero {
 	height: 600px;
 	background-repeat: no-repeat;
@@ -207,17 +239,18 @@ header {
 .home-title {
 	text-align: center;
 	background-color: rgba(255,255,255,0.8);
-	border-radius: 10px;
 	-webkit-border-radius: 10px;
+	border-radius: 10px;
 	padding: 20px;
 	max-width: 500px;
 	margin: 0 auto;
 	position: relative;
 	top: 55%;
-	transform: translateY(-45%);
 	-webkit-transform: translateY(-45%);	
+	transform: translateY(-45%);
 }
 
+/*--End Video Background/Overlay Styles--*/
 .home-content h2 {
 	text-align: center;
 }
@@ -227,8 +260,8 @@ header {
 	background-color: #f7b518;
 	color: #fff;
 	padding: 10px 20px;
-	border-radius: 10px;
 	-webkit-border-radius: 10px;
+	border-radius: 10px;
 	font-size: 24px;
 	letter-spacing: 1px;
 }
@@ -258,33 +291,9 @@ header {
 	background-position: 0 200px;
 }
 
-.full-img-bg {
-	height: 500px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-
-.quote {
-	background-color: rgba(255,255,255,0.8);
-	border-radius: 10px;
-	-webkit-border-radius: 10px;
-	padding: 20px;
-	max-width: 500px;
-	margin: 0 auto;
-	position: relative;
-	top: 50%;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-}
-
-.quote p {
-	margin: 0;
-	font-size: 18px;
-	line-height: 20px;
-}
-
-/*--Footer--*/
+/*--------------------*/
+/*------ Footer ------*/
+/*--------------------*/
 footer {
 	padding: 20px 0;
 }
