--- a/style.css
+++ b/style.css
@@ -141,20 +141,41 @@ header {
 .main-menu-header ul ul {
 	display: none;
 	position: absolute;
-	top: 150px;
+	top: 80px;
+	background-color: #fff;
+	border: .25px solid #73c92d;
 }
 
 .main-menu-header ul ul li {
 	float: none;
-	width: 44px;
+	width: 190px;
+	display: block;
+	border-bottom: .25px solid #73c92d;
+	padding: 15px 10px;
+	margin: 0;
 }
 
 .main-menu-header ul ul li a {
 	padding: 5px 10px;
+	text-decoration: none;
+	color: #000;
 }
 
 .main-menu-header ul li:hover > ul {
 	display: block;
+}
+
+.main-menu-header ul ul:after {
+	width:0px;
+	height:0px;
+	position:absolute;
+	top:0%;
+	left:22px;
+	content:'';
+	transform:translate(0%, -100%);
+	border-left:7px solid transparent;
+	border-right:7px solid transparent;
+	border-bottom:7px solid #73c92d; /*#303030;*/
 }
 
 /*--Search Box Styles--*/
@@ -376,6 +397,8 @@ header {
 	-o-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
+	padding: 0 0 0 20px;
+	width: 95%;
 }
 
 #event-details .ctu-ulitate-style-1-tabs p {
@@ -385,8 +408,9 @@ header {
 }
 /*--end tabs style*/
 .event-btn {
-	float: right;
+	float: left;
 }
+
 .event-btn a {
 	text-decoration: none;
 	background-color: #f7b518;
