--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ header {
     font-size: 16px;
 	color: #000;
 	line-height: 16px;
+	position: relative;
 }
 
 .main-menu-header ul li a:hover {
@@ -427,15 +428,6 @@ header {
 .event-btn a:hover {
 	background-color: #545151;
 	color: #f7b518;
-}
-
-/*-- Speaker Content--*/
-.speakerbox {
-	min-height: 390px;
-	padding-bottom: 20px;
-	max-width: 175px;
-	float: left;
-	margin-right: 30px;
 }
 
 /*--------------------*/
