--- a/plugins/frank-speaker-functionality/css/frontend.css
+++ b/plugins/frank-speaker-functionality/css/frontend.css
@@ -12,9 +12,18 @@
 .popuptitlecont .popuptitle{display: inline-block;padding-right: 20px;margin-top: 10px;padding-top: 5px;font-size: 23px;}
 .popuptitlecont .popuprolecity{display:inline-block;font-size: 12px;}
 .fancybox-opened .fancybox-skin {padding:0px !important;}
+.popupmailtxtcont img {float: right; padding: 0 25px 10px 0;}
+.popupmailtxtcont h2 {font-size: 20px;}
 .popupmailtxtcont{line-height: 25px;padding-left: 30px !important;padding-right: 30px !important;padding-bottom: 20px;padding-top: 25px;text-align: justify;font-family: 'Open Sans', sans-serif;font-size: 13px; color: #000;}
 .popuptitlemaincont{background-color:#F5F2F2;}
-.speakerbox{min-height: 390px;padding-bottom: 20px;max-width: 175px;float: left;margin-right: 30px;}
-.various{font-size: 13px;}
+.speakerbox{min-height: 280px;padding: 10px;width: 200px;float: left;margin-right: 10px;}
+.speakerbox:hover {background-color: #f6f6f6}
+.speakerbox a, .speakerbox a:hover {text-decoration: none;color: #000;}
+.speakerbox h1, .speakerbox h2 {margin: 0; letter-spacing: 0;}
+.speakerbox h2 {line-height: .75;}
+.speakerbox h1 a {font-size: 20px;}
+.speakerbox h2 a {font-size: 16px;}
+.speakerbox p {margin-bottom: 0 !important;}
+.testimonial-text a:focus {outline: none;}
 .fancyboxcont {padding: 0px;width: 75%;}
 @media(max-width:767px){.testimonialpopupimg {float: none; padding-left: 0px;margin: auto;}.fancybox-opened {width: 85% !important;left: 7% !important;}}
