--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ header {
     margin-top: 50px;
     margin-bottom: 30px;
 	float:left;
+	height: 50px;
 }
 
 .main-menu-header ul {
@@ -116,18 +117,26 @@ header {
 }
 
 .main-menu-header li {
-    display: inline;
+    display: block;
+	float: left;
+	line-height: 30px;
+	height: 30px;
+	margin: 0;
+	padding: 0;
+	position: relative;
 }
 
 .main-menu-header ul li a {
     text-decoration: none;  
-    margin: 10px;
-    padding: 5px 0px 5px; 
+   /* margin: 10px;
+    padding: 5px 0px 5px; */
     font-weight: 300;
     font-size: 16px;
 	color: #000;
-	line-height: 16px;
-	position: relative;
+	display: block;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 15px;
 }
 
 .main-menu-header ul li a:hover {
@@ -142,7 +151,7 @@ header {
 .main-menu-header ul ul {
 	display: none;
 	position: absolute;
-	top: 80px;
+	top: 30px;
 	background-color: #fff;
 	border: .25px solid #73c92d;
 }
