styles tabs work on hover

--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ header {
 /*--Event Page Styles--*/
 /*--------------------*/
 
-/*------ Tabs ------*/
+/*------ old Tabs ------*/
 #event-details .ctu-ulimate-style-1 {
 	border-top: none;
 	margin-top: 0;
@@ -416,6 +416,56 @@ header {
     font-family: "Open Sans";
     margin-bottom: 2.5rem;
 }
+
+/*------ Tabs ------*/
+#event-tabs {
+	min-width: 320px;
+	max-width: 1030px;
+	padding: 50px;
+	margin: 0 auto;
+	background: #fff;
+}
+
+#event-tabs section {
+	display: none;
+	padding: 20px 0 0;
+}
+#event-tabs input {
+	display: none;
+}
+
+#event-tabs label {
+	display: inline-block;
+	border-right: 1px solid #73c92d;
+	width: 32%;
+}
+
+#event-tabs label h1 {
+	margin: 0 0 -1px;
+	padding: 5px 25px;
+	font-weight: 600;
+	text-align: center;
+	color: #bbb;
+}
+
+#event-tabs label h1 em {
+	color: #bbb;
+}
+
+#event-tabs label:nth-child(6) {
+	border-right: none;
+}
+
+#event-tabs label > h1:hover, #event-tabs input:checked + label h1, #event-tabs input:checked + label em {
+	color: #C54E90;
+}
+
+#tab1:checked ~ #content1,
+#tab2:checked ~ #content2,
+#tab3:checked ~ #content3,
+#tab4:checked ~ #content4 {
+	display: block;
+}
 /*--end tabs style*/
 .event-btn {
 	float: left;
@@ -434,9 +484,14 @@ header {
 	line-height: 5;
 }
 
+.event-btn a em {
+	color: #fff;
+	font-size: 18px;
+	line-height: 5;
+}
+
 .event-btn a:hover {
 	background-color: #545151;
-	color: #f7b518;
 }
 
 /*--------------------*/
@@ -486,49 +541,6 @@ footer nav ul li a:hover {
 	margin-right: 18px;
 }
 
-
-/*---Tabs---*/
-#event-tabs {
-	min-width: 320px;
-	max-width: 800px;
-	padding: 50px;
-	margin: 0 auto;
-	background: #fff;
-}
-
-#event-tabs section {
-	display: none;
-	padding: 20px 0 0;
-}
-#event-tabs input {
-	display: none;
-}
-
-#event-tabs label {
-	display: inline-block;
-	margin: 0 0 -1px;
-	padding: 15px 25px;
-	font-weight: 600;
-	text-align: center;
-	color: #bbb;
-	border-right: 1px solid #73c92d;
-	width: 25%;
-}
-
-#event-tabs label:nth-child(6) {
-	border-right: none;
-}
-
-#event-tabs label:hover, #event-tabs input:checked + label {
-	color: #C54E90;
-}
-
-#tab1:checked ~ #content1,
-#tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4 {
-	display: block;
-}
 /*@media (min-width: 550px) {
 	.container {
 		width: 100%;
