--- a/plugins/frank-speaker-functionality/css/frontend.css
+++ b/plugins/frank-speaker-functionality/css/frontend.css
@@ -12,9 +12,10 @@
 .popuptitlecont .popuptitle{display: inline-block;padding-right: 20px;margin-top: 10px;padding-top: 5px;font-size: 23px;}
 .popuptitlecont .popuprolecity{display:inline-block;font-size: 12px;}
 .fancybox-opened .fancybox-skin {padding:0px !important;}
-.popupmailtxtcont img {float: right; padding: 0 25px 10px 0;}
+.popupmailtxtcont img {float: left; padding: 0 25px 10px 0;}
+.popupmailtxtcont h1 {font-size: 25px;margin: 15px 0 5px;}
 .popupmailtxtcont h2 {font-size: 20px;}
-.popupmailtxtcont{line-height: 25px;padding-left: 30px !important;padding-right: 30px !important;padding-bottom: 20px;padding-top: 25px;text-align: justify;font-family: 'Open Sans', sans-serif;font-size: 13px; color: #000;}
+.popupmailtxtcont{line-height: 25px;padding-left: 30px !important;padding-right: 30px !important;padding-bottom: 20px;padding-top: 25px;text-align: justify;font-family: Arial, Helvetica, sans-serif;font-size: 13px; color: #000;}
 .popuptitlemaincont{background-color:#F5F2F2;}
 .speakerbox{min-height: 280px;padding: 10px;width: 200px;float: left;margin-right: 10px;}
 .speakerbox:hover {background-color: #f6f6f6}
