--- a/style.css
+++ b/style.css
@@ -409,7 +409,7 @@ header {
 #event-tabs {
 	min-width: 320px;
 	max-width: 1030px;
-	padding: 50px;
+	padding: 0 50px 50px;
 	margin: 0 auto;
 	background: #fff;
 }
@@ -430,7 +430,7 @@ header {
 
 #event-tabs label h1 {
 	margin: 0 0 -1px;
-	padding: 5px 25px;
+	padding: 0 25px 5px;
 	font-weight: 300;
 	font-size: 25px;
 	text-align: center;
