--- a/style.css
+++ b/style.css
@@ -124,15 +124,14 @@ header {
 }
 
 .main-menu-header {
-    text-align: left;
     margin-top: 50px;
     margin-bottom: 30px;
-	float:left;
 	height: 50px;
 }
 
 .main-menu-header ul {
-    margin: 0; 
+    width: 95%;
+	margin: 0 auto; 
     padding: 0; 
     list-style-type: none; 
     list-style-image: none; 
