--- a/plugins/frank-speaker-functionality/css/frontend.css
+++ b/plugins/frank-speaker-functionality/css/frontend.css
@@ -17,7 +17,7 @@
 .popupmailtxtcont h2 {font-size: 20px;}
 .popupmailtxtcont{line-height: 25px;padding-left: 30px !important;padding-right: 30px !important;padding-bottom: 20px;padding-top: 25px;text-align: justify;font-family: Arial, Helvetica, sans-serif;font-size: 13px; color: #000;}
 .popuptitlemaincont{background-color:#F5F2F2;}
-.speakerbox{min-height: 280px;padding: 10px;width: 200px;float: left;margin-right: 10px;}
+.speakerbox{min-height: 280px;padding: 10px;width: 200px;float: left;}
 .speakerbox:hover {background-color: #f6f6f6}
 .speakerbox a, .speakerbox a:hover {text-decoration: none;color: #000;}
 .speakerbox h1, .speakerbox h2 {margin: 0; letter-spacing: 0;}
