--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .clear {clear: both;}
 
-h1 {font-size: 3.0rem;}
+h1 {font-size: 3.0rem; letter-spacing:0;}
 h2 {font-size: 2.6rem;}
 h3 {font-size: 2.3rem;}
 h4 {font-size: 2.1rem;}
@@ -387,6 +387,7 @@ header {
 	display: inline-block;
 	border-right: 1px solid #73c92d;
 	width: 32%;
+	margin: 0.67em 0;
 }
 
 #event-tabs label h1 {
@@ -460,6 +461,7 @@ header {
 
 .page-nav ul {
 	list-style: none;
+	margin: 0;
 }
 
 .page-nav ul li a {
@@ -468,6 +470,10 @@ header {
     font-size: 16px;
 	color: #000;
 	line-height: 30px;
+}
+
+.toggle-page-nav, .mobile-page-nav {
+    display: none !important;
 }
 
 /*--- Accordions ---*/
@@ -581,6 +587,79 @@ footer nav ul li a:hover {
 	}
 }*/
 
+@media (max-width: 440px) {
+	.quote {
+		margin: 0 30px;
+	}
+}
+
+@media (max-width: 660px) {
+	.quote {
+		margin: 0 50px;
+	}
+}
+
+@media (max-width: 720px) {
+	.one.columns, .two.columns, .three.columns, .four.columns, .five.columns, .six.columns, .seven.columns, .eight.columns, .nine.columns, .ten.columns, .eleven.columns, .twelve.columns {
+		width: 100%;
+		margin: 0;
+	}	
+	
+	.page-nav {
+		display: none;
+	}
+	
+	.mobile-page-nav h1 {
+		margin: 0;
+		padding: 0;
+		line-height: 0;
+		text-align: center;
+	}
+	
+	.toggle-page-nav {
+		padding: 17px 0;
+		margin: 0 0 10px;
+		display: inline-block !important;
+		background-color: #f7b518;
+		color: #fff;
+		transition: color linear 0.15s;
+		font-size: 20px;
+		width: 100%;
+	}
+	
+	.toggle-page-nav:hover, .toggle-page-nav.active {
+		text-decoration: none;
+		color: #f7b518;
+		background-color: #545151;
+	}
+	
+	.mobile-page-nav {
+		display: inline-block !important;
+		position: relative;
+	}
+	
+	.mobile-page-nav ul {
+		display: none;
+		margin: 0;
+		background: #fff;
+		text-align: center;
+	}
+	
+	.mobile-page-nav li {
+		display: block;
+	}
+	
+	.mobile-page-nav li a {
+		color: #000;
+	}
+	
+	.mobile-page-nav li a:hover {
+		text-decoration: none;
+		color: #C54E90;
+	}
+	
+}
+
 @media (max-width: 900px) {
 	/*--------------------*/
 	/*--Event Page Styles--*/
@@ -692,15 +771,7 @@ footer nav ul li a:hover {
 @media (max-width: 1090px) {
 	.seven.columns.sitenav {
 		margin-left: 0;
-		width: 60%;
-	}
-	
-	.container {
-		width: 90%;
-	}
-	
-	#event-tabs {
-		
+		width: 60%;	
 	}
 }
 
