--- a/plugins/frank-speaker-functionality/css/frontend.css
+++ b/plugins/frank-speaker-functionality/css/frontend.css
@@ -17,7 +17,8 @@
 .popupmailtxtcont h2 {font-size: 20px;}
 .popupmailtxtcont{line-height: 25px;padding-left: 30px !important;padding-right: 30px !important;padding-bottom: 20px;padding-top: 25px;text-align: justify;font-family: Arial, Helvetica, sans-serif;font-size: 13px; color: #000;}
 .popuptitlemaincont{background-color:#F5F2F2;}
-.speakerbox{min-height: 280px;padding: 10px;width: 200px;float: left;}
+.speaker-tab {display: flex; flex-direction: row; justify-content: center; flex-wrap: wrap;}
+.speakerbox{min-height: 280px;padding: 10px;width: 200px;}
 .speakerbox:hover {background-color: #f6f6f6}
 .speakerbox a, .speakerbox a:hover {text-decoration: none;color: #000;}
 .speakerbox h1, .speakerbox h2 {margin: 0; letter-spacing: 0;}
@@ -27,4 +28,5 @@
 .speakerbox p {margin-bottom: 0 !important;}
 .testimonial-text a:focus {outline: none;}
 .fancyboxcont {padding: 0px;width: 75%;}
+@media(max-width:488px){.speaker-tab {max-height: 880px; overflow:scroll;}}
 @media(max-width:767px){.testimonialpopupimg {float: none; padding-left: 0px;margin: auto;}.fancybox-opened {width: 85% !important;left: 7% !important;}}
