--- a/style.css
+++ b/style.css
@@ -212,9 +212,70 @@ header {
 	border-bottom:7px solid #73c92d; /*#303030;*/
 }
 
-.toggle-nav, .mobile-siteheader {
+/*--Mobile Navigation--*/
+.mobile-siteheader {
     display: none !important;
 }
+
+.mobile-nav {
+	float: right;	
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end; 
+}
+/* The Overlay (background) */
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0); /* Black fallback color */
+    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    overflow-x: hidden; 
+    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 100%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+
+/* The navigation links inside the overlay */
+.overlay a {
+    padding: 8px;
+    text-decoration: none;
+    font-size: 27px;
+    color: #C54E90;
+    transition: 0.3s; /* Transition effects on hover (color) */
+}
+
+/* When you mouse over the navigation links, change their color */
+.overlay a:hover, .overlay a:focus {
+    color: #f1f1f1;
+}
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
+
+#mobile-open {
+	font-family: FontAwesome;
+	font-size: 40px;
+	padding-right: 40px;
+	color: #C54E90;
+	line-height: 2.8;
+}
+
+/*end overlay styles*/
 
 /*--Social Links--*/
 .social-links {
@@ -589,58 +650,10 @@ footer nav ul li a:hover {
 	margin-right: 18px;
 }
 
-/*@media (min-width: 550px) {
-	.container {
-		width: 100%;
+@media (max-width: 440px) {
+	.quote {
+		margin: 0 30px;
 	}
-}*/
-
-/*--Mobile Nav Overlay Stuff--*/
-/* The Overlay (background) */
-.overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */    
-    height: 100%;
-    width: 0;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
-}
-
-/* Position the content inside the overlay */
-.overlay-content {
-    position: relative;
-    top: 25%; /* 25% from the top */
-    width: 100%; /* 100% width */
-    text-align: center; /* Centered text/links */
-    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
-}
-
-/* The navigation links inside the overlay */
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block; /* Display block instead of inline */
-    transition: 0.3s; /* Transition effects on hover (color) */
-}
-
-/* When you mouse over the navigation links, change their color */
-.overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-}
-
-/* Position the close button (top right corner) */
-.overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
 }
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
@@ -652,11 +665,25 @@ footer nav ul li a:hover {
         right: 35px;
     }
 }
-/*end overlay styles*/
 
-@media (max-width: 440px) {
-	.quote {
-		margin: 0 30px;
+@media (max-width: 470px) {
+	.mobile-nav {
+		flex-direction: column-reverse;
+	}
+	
+	.social-navigation {
+		margin: 0 20px !important;
+	}
+	
+	.social-navigation a {
+		width: 32px;
+		font-size: 30px;
+	}
+	
+	#mobile-open {
+		line-height: 1.6;
+		padding-right: 23px;
+		text-align: right;
 	}
 }
 
@@ -850,67 +877,13 @@ footer nav ul li a:hover {
 		text-decoration: none;
 	}
 	
-	.toggle-nav {
-		padding: 15px;
-		margin: 15px;
-		display: inline-block !important;
-		color: #C54E90;
-		transition: color linear 0.15s;
-		font-size: 40px;
+	.social-navigation {
+		margin: 40px 20px;
 	}
 	
-	.toggle-nav:hover, .toggle-nav.active {
-		text-decoration: none;
-		color: #000;
-	} 
-	
-	.mobile-sitenav {
-		display: inline-block;
-		position: relative;
-		float: right;
-	}
-	
-	.mobile-sitenav ul {
-		display: none;
-		position: absolute;
-		top: 89%;
-		right: 0px;
-		padding-right: 33px;
-		background: #fff;
-		border-left: .25px solid #73c92d;
-		border-bottom: .25px solid #73c92d;
-		text-align: right;
-	}
-	
-	.mobile-sitenav li {
-		display: block;
-		float: none;
-		width: 130px;
-	}
-	
-	.mobile-sitenav li a {
-		color: #000;
-	}
-	
-	.mobile-sitenav li a:hover {
-		text-decoration: none;
-		color: #C54E90;
-	}
-	
-	.mobile-sitenav .social-navigation {
+	.social-navigation ul {
+		list-style: none;
 		margin: 0;
-	}
-
-	.mobile-sitenav .social-navigation li {
-		width: 29px;
-		float: left;
-	}
-	
-	.mobile-sitenav .social-navigation a {
-		font-size: 25px;
-		color: #f7b518;
-		width: 10px;
-		float: right;
 	}
 }
 
